# bitpack-compare

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: add_buildtype_ultra.cmake
src/: main.cpp
